--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "puppet/modules/java"]
 	path = puppet/modules/java
-	url = git@github.com:puppetlabs/puppetlabs-java.git
+	url = git://github.com/puppetlabs/puppetlabs-java.git
 [submodule "puppet/modules/apt"]
 	path = puppet/modules/apt
-	url = git@github.com:puppetlabs/puppetlabs-apt.git
+	url = git://github.com/puppetlabs/puppetlabs-apt.git
 [submodule "puppet/modules/stdlib"]
 	path = puppet/modules/stdlib
-	url = git@github.com:puppetlabs/puppetlabs-stdlib.git
+	url = git://github.com/puppetlabs/puppetlabs-stdlib.git
 [submodule "puppet/modules/postgresql"]
 	path = puppet/modules/postgresql
-	url = git@github.com:puppetlabs/puppet-postgresql.git
+	url = git://github.com/puppetlabs/puppet-postgresql.git
 [submodule "puppet/modules/firewall"]
 	path = puppet/modules/firewall
 	url = git://github.com/puppetlabs/puppetlabs-firewall.git
